# spotforecast2-safe

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  .semantic-release-init  404.html  ACTION_CARD.md  CHANGELOG.md  CODEQL_LOCAL_GUIDE.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MODEL_CARD.md  PR_CREATION_GUIDE.md  README.md  REUSE.toml  SETUP_OPENSSF_STEPS_2_3.md  check_results.py  index.html  junit.xml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_predictions_diff.py  verify_release_config.py
.github/: CODEOWNERS  SECURITY.md  WORKFLOWS_GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codecov.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
LICENSES/: AGPL-3.0-or-later.txt  BSD-3-Clause.txt
MODEL_CARD/: index.html
PERIOD_CONFIGURATION_RATIONALE/: index.html
VERSION_MANAGEMENT/: index.html
api/data/: index.html
api/exceptions/: index.html
api/forecaster/: index.html
api/model_selection/: index.html
api/preprocessing/: index.html
api/processing/: index.html
api/stats/: index.html
api/utils/: index.html
api/weather/: index.html
api_overview/: index.html
codeql-custom-queries-python/: codeql-pack.lock.yml  codeql-pack.yml
contributing/: index.html
docs/: MODEL_CARD.md  PERIOD_CONFIGURATION_RATIONALE.md  VERSION_MANAGEMENT.md  api_overview.md  contributing.md  hooks.py  index.md  security.md  tasks.md
docs/api/: data.md  exceptions.md  forecaster.md  model_selection.md  preprocessing.md  processing.md  stats.md  utils.md  weather.md
docs/preprocessing/: outliers.md  time_series_visualization.md
docs/processing/: model_persistence.md
docs/recursive/: ForecasterEquivalentDate.md  ForecasterRecursive.md
docs/safe/: MODEL_CARD.md  VERSION_MANAGEMENT.md  spotforecast2-safe.md
preprocessing/outliers/: index.html
preprocessing/time_series_visualization/: index.html
processing/model_persistence/: index.html
recursive/ForecasterEquivalentDate/: index.html
recursive/ForecasterRecursive/: index.html
safe/MODEL_CARD/: index.html
safe/VERSION_MANAGEMENT/: index.html
safe/spotforecast2-safe/: index.html
scripts/: demo_residual_binning.ipynb  update_version.py
search/: search_index.json
security/: index.html
spotforecast2_safe-0.1.0/: PKG-INFO
spotforecast2_safe-0.1.0/src/spotforecast2_safe/: __init__.py
spotforecast2_safe-0.1.0/src/spotforecast2_safe/data/: __init__.py
src/spotforecast2_safe/: __init__.py  exceptions.py
src/spotforecast2_safe/data/: __init__.py  data.py  fetch_data.py
src/spotforecast2_safe/datasets/csv/: demo01.csv.license
src/spotforecast2_safe/downloader/: __init__.py  entsoe.py
src/spotforecast2_safe/forecaster/: __init__.py  base.py  metrics.py  utils.py
src/spotforecast2_safe/manager/: __init__.py  logger.py  metrics.py  persistence.py  predictor.py  tools.py  trainer.py
src/spotforecast2_safe/model_selection/: __init__.py  bayesian_search.py  grid_search.py  random_search.py  split_base.py  split_one_step.py  split_ts_cv.py  utils_common.py  utils_metrics.py  validation.py
src/spotforecast2_safe/preprocessing/: __init__.py  _binner.py  _common.py  _differentiator.py  _rolling.py  curate_data.py  exog_builder.py  forecaster_recursive_model.py  imputation.py  linearly_interpolate_ts.py  outlier.py  repeating_basis_function.py  split.py  time_series_visualization.py
src/spotforecast2_safe/processing/: __init__.py  agg_predict.py  n2n_predict.py  n2n_predict_with_covariates.py
src/spotforecast2_safe/stats/: __init__.py  autocorrelation.py
src/spotforecast2_safe/tasks/: __init__.py  task_safe_demo.py  task_safe_n_to_1_with_covariates_and_dataframe.py
src/spotforecast2_safe/utils/: __init__.py  convert_to_utc.py  cpe.py  data_transform.py  forecaster_config.py  generate_holiday.py  validation.py
src/spotforecast2_safe/weather/: __init__.py  weather_client.py
tasks/: index.html  task_demo.py  task_n_to_1.py  task_n_to_1_dataframe.py  task_n_to_1_with_covariates.py  task_n_to_1_with_covariates_and_dataframe.py  task_safe_demo.py  task_safe_n_to_1_with_covariates_and_dataframe.py
tests/: TEST_BINNING_RESIDUALS_COVERAGE.md  test_binning_in_sample_residuals.py  test_cache_home.py  test_check_preprocess_series.py  test_cpe.py  test_curate_data.py  test_docs_ForecasterRecursive.py  test_docstring_examples_demo_data.py  test_docstring_examples_demo_loader.py  test_docstring_examples_entsoe.py  test_docstring_examples_equivalent_date.py  test_docstring_examples_forecaster_recursive.py  test_docstring_examples_forecaster_recursive_model_params.py  test_docstring_examples_get_feature_importances.py  test_docstring_examples_manager.py  test_docstring_examples_persistence.py  test_docstring_examples_predict_interval.py  test_docstring_examples_set_in_sample_residuals.py  test_docstring_examples_set_out_sample_residuals.py  test_docstring_examples_set_window_features.py  test_downloader_entsoe.py  test_entsoe_download_doctest.py  test_entsoe_integration.py  test_entsoe_merge_doctest.py  test_entsoe_validation.py  test_exceptions_examples.py  test_exog_builder.py  test_exog_builder_examples.py  test_fetch_data.py  test_forecaster_equivalent_date.py  test_forecaster_equivalent_date_binning.py  test_forecaster_equivalent_date_fit.py  test_forecaster_equivalent_date_init.py  test_forecaster_equivalent_date_predict.py  test_forecaster_equivalent_date_predict_interval.py  test_forecaster_equivalent_date_repr.py  test_forecaster_equivalent_date_repr_html.py  test_forecaster_equivalent_date_set_in_sample_residuals.py  test_forecaster_equivalent_date_set_out_sample_residuals.py  test_forecaster_equivalent_date_tags_summary.py  (+72 more)
tests/data/: test_fetch_demo_data.py  test_fetch_holiday_data.py  test_fetch_weather_data.py
tests/manager/: test_config_entsoe.py  test_config_entsoe_params.py
tests/processing/: test_agg_predict.py  test_n2n_predict.py
(+27 files in other folders)
