[project]
name = "spotforecast2-safe"
version = "0.3.6"
description = "spotforecast2-safe (Core): Safety-critical time series forecasting for production"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
authors = [
    { name = "bartzbeielstein", email = "32470350+bartzbeielstein@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "astral>=3.2",
    "feature-engine>=1.9.3",
    "flake8>=7.3.0",
    "holidays>=0.90",
    "lightgbm>=4.6.0",
    "numba>=0.63.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.2",
]

[project.urls]
Documentation = "https://sequential-parameter-optimization.github.io/spotforecast2-safe/"
Repository = "https://github.com/sequential-parameter-optimization/spotforecast2-safe"
Issues = "https://github.com/sequential-parameter-optimization/spotforecast2-safe/issues"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cloudpickle>=3.1.2",
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.2",
    "mkdocstrings-python>=2.0.1",
    "safety>=3.0.0",
    "bandit>=1.8.0",
]

[project.scripts]
spotforecast-safe-demo = "spotforecast2_safe.tasks.task_safe_demo:main"
spotforecast-safe-n2o1-cov-df = "spotforecast2_safe.tasks.task_safe_n_to_1_with_covariates_and_dataframe:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
